--- a/templates/contact.html
+++ b/templates/contact.html
@@ -92,6 +92,7 @@
 </style>
 </head>
 <body>
+    <div class="container">
 <nav class="navbar">
     <div class="logo">TravelApp</div>
     <ul>
@@ -122,6 +123,7 @@
             <button type="submit">Send Message</button>
         </div>
     </form>
+</div>
 </div>
 </body>
 {% endblock content %}
