--- a/templates/nav.html
+++ b/templates/nav.html
@@ -139,7 +139,7 @@
     <nav class="navbar">
       <div class="logo">TravelApp</div>
       <ul>
-        <li><a href="#destinations">Destinations</a></li>
+        <li><a href="travel">Destinations</a></li>
         <li><a href="#bookings">Bookings</a></li>
         <li><a href="#deals">Deals</a></li>
         <li><a href="contact">Contact Us</a></li>
