--- a/templates/travel.html
+++ b/templates/travel.html
@@ -87,7 +87,7 @@
     }
 
     .news-item button {
-      background-color: #6633cc; /* สีพื้นหลังของปุ่ม */
+      background-color: #002d80; /* สีพื้นหลังของปุ่ม */
       color: #fff;
       border: none;
       border-radius: 5px;
@@ -98,7 +98,7 @@
     }
 
     .news-item button:hover {
-      background-color: #4b2a8b; /* สีพื้นหลังของปุ่มเมื่อชี้เมาส์ */
+      background-color: #002d80; /* สีพื้นหลังของปุ่มเมื่อชี้เมาส์ */
       transform: scale(1.05); /* ขยายปุ่มเล็กน้อยเมื่อชี้เมาส์ */
     }
   </style>
