--- a/templates/nav.html
+++ b/templates/nav.html
@@ -135,7 +135,7 @@
         />
       </a>
       <ul id="navbar-menu">
-        <li><a href="#">Home</a></li>
+        <li><a href="http://127.0.0.1:8000/">Home</a></li>
         <li><a href="travel">ร้าน</a></li>
         <li><a href="#">Mac</a></li>
         <li><a href="#">iPad</a></li>
