--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
 
   /* ปรับปรุงปุ่ม */
   button {
-    background-color: #6633cc;
+    background-color: #002d80;
     color: white;
     border: none;
     border-radius: 5px;
