--- a/templates/nav.html
+++ b/templates/nav.html
@@ -136,7 +136,7 @@
       </a>
       <ul id="navbar-menu">
         <li><a href="http://127.0.0.1:8000/">Home</a></li>
-        <li><a href="travel">ร้าน</a></li>
+        <li><a href="travel">เที่ยว</a></li>
         <li><a href="#">Mac</a></li>
         <li><a href="#">iPad</a></li>
         <li><a href="#">iPhone</a></li>
