--- a/templates/nav.html
+++ b/templates/nav.html
@@ -138,13 +138,13 @@
         <li><a href="http://127.0.0.1:8000/">Home</a></li>
         <li><a href="http://127.0.0.1:8000/travel/">แนะนำวัดในจังหวัดศรีสะเกษ</a></li>
         <li><a href="http://127.0.0.1:8000/option/">เลือกสถานที่เที่ยว</a></li>
-        <li><a href="#">iPhone</a></li>
-        <li><a href="#">Watch</a></li>
-        <li><a href="#">AirPods</a></li>
-        <li><a href="#">TV และบ้าน</a></li>
-        <li><a href="#">ความบันเทิง</a></li>
-        <li><a href="#">อุปกรณ์เสริม</a></li>
-        <li><a href="#">บริการช่วยเหลือ</a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
       </ul>
       <div class="navbar-right">
         <div class="profile">
