--- a/templates/option.html
+++ b/templates/option.html
@@ -200,7 +200,15 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดพระธาตุสุพรรณหงส์</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 1</p>
+              <p> วัดพระธาตุสุพรรณหงส์ วัดสวยในศรีสะเกษ อีกแห่ง ที่ต้องไม่พลาดไปชมความสวยงามของ
+               พระอุโบสถบนเรือสุพรรณหงส์จำลอง ซึ่งตั้งอยู่กลางสระน้ำค่ะ 
+               นับว่าเป็นความโดดเด่นของวัดที่ไม่มีที่ไหนเหมือนเลยทีเดียวสำหรับพระอุโบสถนั้นมีความกว้าง 5 เมตร ยาว 13.60 เมตร 
+               หลังคาทรงจัตุรมุข 3 ชั้น มียอดมณฑปกลางอุโบสถเพื่อบรรจุพระบรมสารีริกธาตุ 
+               ทำให้วัดพระธาตุสุพรรณหงส์จึงเป็นที่เที่ยวเชิงพุทธศาสนาเพราะความสวยงาม 
+               รวมถึงเป็นที่สักการะบูชาของชาวบ้าน และนักท่องเที่ยวอีกด้วย
+               :ที่อยู่ หมู่บ้านหว้าน ตำบลน้ำคำ อำเภอเมือง จังหวัดศรีสะเกษ
+
+  1</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -212,7 +220,15 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>สวนสมเด็จพระศรีนครินทร์</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 2</p>
+              <p>สวนสมเด็จพระศรีนครินทร์ ศรีสะเกษ อีกหนึ่งที่เที่ยวสุดร่มรื่นที่เต็มไปด้วยต้นม้สีเขียว 
+              ที่นี่ยังเป็นสวนสาธารณะเฉลิมพระเกียรติสมเด็จพระศรีนครินทราบรมราชชนนี 80 พรรษาแห่งแรกของประเทศไทยอีกด้วยค่ะสวนสมเด็จพระศรีนครินทร์
+               ศรีสะเกษ อีกหนึ่งที่เที่ยวสุดร่มรื่นที่เต็มไปด้วยต้นม้สีเขียว 
+               ที่นี่ยังเป็นสวนสาธารณะเฉลิมพระเกียรติสมเด็จพระศรีนครินทราบรมราชชนนี 80 พรรษาแห่งแรกของประเทศไทยอีกด้วยค่ะ
+               ที่อยู่ : ตำบลหนองครก อำเภอเมืองศรีสะเกษ จังหวัดศรีสะเกษ
+
+ 
+
+ </p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -224,7 +240,19 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดพระธาตุเรืองรอง</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 3</p>
+              <p>พระธาตุเรืองรอง ตั้งอยู่ภายในวัดบ้านสร้างเรือง สร้างขึ้นเมื่อปี พ.ศ. 2525 โดยหลวงปู่ธัมมา พิทักษา 
+              เพื่อเป็นที่ประดิษฐานพระบรมสารีริกธาตุให้ชาวบ้านมาสักการะบูชาค่ะ องค์พระธาตุ 
+              เป็นศิลปะแบบพื้นบ้านสี่เผ่า คือ ส่วย เขมร ลาว เยอ ค่ะ
+
+              ภายในพระธาตุมี 6 ชั้น โดย
+
+ชั้นที่ 1 จัดแสดงนิทรรศการนิทานพื้นบ้าน
+ชั้นที่ 2 จัดแสดงพิพิธภัณฑ์พื้นบ้านสี่เผ่าไทย คือ ส่วย เขมร ลาว เยอ
+ชั้นที่ 3 จัดแสดงวัตถุโบราณ เครื่องมือทำมาหากินของชาวบ้านในอดีต
+ชั้นที่ 4 เป็นจุดพักผ่อน
+ชั้นที่ 5 เป็นที่ปฏิบัติธรรม สมาธิ
+ชั้นที่ 6 ประดิษฐานพระบรมเกศาธาตุ (เส้นผม) ของพระอรหันต์ และยังเป็นจุดที่สามารถชมวิวสวยๆ ได้อีกด้วย
+ที่อยู่ : ตำบลหญ้าปล้อง อำเภอเมือง จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -236,7 +264,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>เกาะกลางน้ำ</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 4</p>
+              <p>  เกาะกลางน้ำ เป็นที่เที่ยวพักผ่อน ออกกำลังกายของชาวศรีสะเกษค่ะ 
+              เป็นสวนสาธารณะขาดใหญ่ที่รายล้อมไปด้วยต้นไม้ บรรยากาศร่มรื่น อีกทั้งยังมี Sisaket Aquarium ศูนย์แสดงพันธุ์สัตว์น้ำที่ใหญ่ที่สุดในภาคตะวันออกเฉียงเหนือตั้งอยู่ที่นี่อีกด้วย
+               รวมถึง หอศรีลำดวนเฉลิมพระเกียรติ 
+              ซึ่งเป็นจุดชมวิวสวยๆ ของจังหวัดศรีสะเกษค่ะ
+              ที่อยู่ : เกาะกลางน้ำ ตำบลหนองครก อำเภอเมือง จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -248,7 +280,13 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>หอศรีลำดวนเฉลิมพระเกียรติ</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 5</p>
+              <p>  หอศรีลำดวนเฉลิมพระเกียรติ เป็นพิพิธภัณฑ์การเรียนรู้ทางวัฒนธรรม และวิถีชีวิตของชาวศรีสะเกษค่ะ 
+              ซึ่งตั้งอยู่ที่เกาะกลางน้ำ 
+              นอกจากนี้ยังมีส่วนอุทยานเพื่อการเรียนรู้ด้านวิทยาศาสตร์อีกด้วย 
+              ซึ่งจะให้ความรู้เกี่ยวกับวิทยาการต่างๆ ผ่านสื่อและเทคโนโลยีที่ทันสมัย  
+              สำหรับคนที่อยากชมวิวสวยๆ สูดอากาศดีๆ แล้วล่ะก็ ด้านบนของหอคอยยังมีดาดฟ้า 
+              ซึ่งมีสวนหย่อมให้ได้พักผ่อนหน่อยใจ รวมถึงมีร้านค้า ร้านอาหารให้บริการด้วยค่ะ
+              ที่อยู่ : เกาะกลางน้ำ ตำบลหนองครก อำเภอเมือง จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -260,7 +298,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดบ้านหนองตะเคียน</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 6</p>
+              <p>  วัดบ้านหนองตะเคียน เป็นวัดที่สร้างตามแบบผสมผสานศิลปะขอมและล้านนา 
+              ซึ่งเก่าแก่อย่างมาก สร้างในสมัยกรุงศรีอยุธยา ภายในพระอุโบสถจะประดิษฐาน พระศรีอริยเมตตรัย ส่วนข้างพระอุโบสถนั้น 
+              ก็จะมีลานพระพุทธรูปปางสมาธิ 28 องค์ ตั้งเป็นแนวรูปสี่เหลี่ยม
+               รวมถึงมีการประดิษฐานพระบรมราชานุสาวรีย์สมเด็จพระเจ้าตากสินมหาราชเอาไว้อีกด้วยเช่นกัน
+               ที่อยู่ : ตำบลจาน อำเภอเมืองศรีสะเกษ จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -272,7 +314,13 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>Sisaket Aquarium</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 7</p>
+              <p>  Sisaket Aquarium หรือ ศูนย์แสดงพันธุ์สัตว์น้ำศรีสะเกษ 
+              ตั้งอยู่ภายในสวนเฉลิมพระเกียรติพระบาทสมเด็จพระเจ้าอยู่หัวเฉลิมพระชนมพรรษา 80 พรรษา 
+              เรียกได้ว่าเป็นศูนย์แสดงพันธุ์สัตว์น้ำแห่งแรกในภาคอีสานตอนใต้เลยก็ว่าได้
+               ภายในอาคารก็จะมีการจัดแบ่งโซนแสดงต่างๆ 
+               ทั้ง โซนปลาทะเล ปลาน้ำจืด และปลาสวยงาม โดยมีพันธุ์ปลากว่า 100 ชนิดเลยทีเดียว แต่ไฮไลท์จะอยู่ที่ อุโมงค์แก้วใต้น้ำ มีระยะทางกว่า 24 เมตร 
+              อีกทั้งยังมีการแสดงโชว์ดำน้ำและให้อาหารปลาจากเจ้าหน้าที่ในช่วงบ่ายสองโมงของทุกวันอีกด้วยค่ะ
+              ที่อยู่ : สวนเฉลิมพระเกียรติพระบาทสมเด็จพระเจ้าอยู่หัว 80 พรรษา ถนนเลี่ยงเมือง ตำบลหนองครก อำเภอเมืองศรีสะเกษ จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -284,7 +332,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>ตึกขุนอำไพพาณิชย์</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 8</p>
+              <p>   ตึกขุนอำไพพาณิชย์ หรือที่เรียกสั้นๆ ว่า ตึกขุนอำไพ เป็นบ้านของ ขุนอำไพพาณิชย์ หรือ ทองอินทร์ นาคสีหราช คหบดีชาวศรีษะเกษ 
+              สร้างขึ้นมาเมื่อปี พ.ศ. 2468 โดยหลังจากที่ท่านถึงแก่กรรมแล้ว ก็ได้มีการเปิดให้เช่าเป็นที่พักอาศัยและประกอบการค้าเป็นเวลานานกว่า 40 ปี จนปี พ.ศ. 2523 
+              อาคารก็ได้มีสภาพชำรุดเป็นอย่างมาก เลยประกาศเป็นเขตหวงห้าม 
+              จนกรมศิลปากรได้เข้ามาบูรณะและก็ขึ้นทะเบียนให้เป็นโบราณสถานสำคัญของชาติในปี พ.ศ. 2537 ค่ะ
+              อยู่ : 1166 ถนนอุบล ตำบลเมืองใต้ อำเภอเมืองศรีสะเกษ จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -296,7 +348,12 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดมหาพุทธาราม</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 9</p>
+              <p>วัดมหาพุทธาราม หรือที่เรียกกันว่า วัดพระโต โดยประวัติที่มานั้นก็เกิดขึ้นเมื่อประมาณปี พ.ศ. 2328 เป็นช่วงที่ได้ย้ายเมืองศรีสะเกษ 
+              จากบ้านโนนสามขาสระกำแพง มาตั้งอยู่ที่เป็นศาลหลักเมืองในปัจจุบัน มีการสร้างวัดนี้ขึ้นมาในบริเวณที่พบหลวงพ่อโต ภายในวิหารของวัด
+               ก็จะประดิษฐานพระพุทธรูปคู่บ้านคู่เมืองของชาวศรีสะเกษ นั่นก็คือ “หลวงพ่อโต” 
+              พระพุทธรูปองค์ใหญ่ปางมารวิชัย สูงจากฐานถึงยอดเกศ 6.85 เมตร หน้าตักกว้าง 3.50 เมตร 
+              และวัดนี้ยังเป็นสำนักปฏิบัติธรรมประจำจังหวัดอีกด้วยค่า
+              ที่อยู่ : ถนนขุขันธ์ ตำบลเมืองเหนือ อำเภอเมือง จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -308,7 +365,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>ศาลหลักเมืองศรีสะเกษ</h4>
-              <p>รายละเอียดเกี่ยวกับโปรเจค 10</p>
+              <p> ศาลหลักเมืองศรีสะเกษ หรือ ศาลเจ้าพ่อหลักเมืองศรีสะเกษ เป็นสถาปัตยกรรมสวยๆ ใจกลางเมืองศรีสะเกษ 
+              ที่มีตัวอาคารมีการตกแต่งประดับด้วยหินอ่อนและกระจกสี มีจั่วหน้าด้านทิศใต้ประดิษฐานตราสัญลักษณ์กาญจนาภิเษก 
+              ส่วนเสาหลักเมืองด้านในจะทำด้วยไม้ชัยพฤกษ์ เป็นเสาหัวเม็ดทรงมัณฑ์ ปลายยอดเสาแกะสลักให้เป็นมนแหลม 
+              ถือได้ว่าเป็นศูนย์รวมจิตใจของชาวศรีสะเกษอันงดงาม ใครแวะเวียนไปก็อย่าลืมไปสักการะกันนะคะ
+              ที่อยู่ : ตำบลหนองครก อำเภอเมืองศรีสะเกษ จังหวัดศรีสะเกษ</p>
             </div>
           </div>
 
@@ -323,7 +384,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดปราสาทเยอเหนือ</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>     วัดปราสาทเยอเหนือ แห่งนี้ มีอายุกว่า 200 ปีมาแล้วค่ะ โดยสร้างขึ้นจากชาวบ้านที่นับถือศาสนาพุทธซึ่งส่วนใหญ่เป็นชาวเยอ 
+              ที่ได้รับอารยธรรมทางขอมมานั่นเอง ทำให้ภายในวัดจะมีศิลปะคล้ายกับศิลปะขอมโบราณผสมสมัยใหม่
+               รวมถึงเป็นครั้งแรกในประวัติศาสตร์ของจังหวัดศรีสะเกษ ที่ในหลวงรัชกาบลที่ 9 นั้น พระราชทานกฐินต้นในจังหวัด 
+               และเป็นวัดแรกที่ทรงพระราชทานกฐินต้นอีกด้วยค่ะ
+               ที่อยู่ : ตำบลปราสาทเยอ อำเภอไพรบึง จังหวัดศรีสะเกษ</p>
             </div>
           </div>
 
@@ -338,7 +403,16 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>ปราสาทสระกำแพงใหญ่</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>ปราสาทสระกำแพงใหญ่ หรือ ปราสาทศรีพฤทเธศวร ตั้งอยู่ในบริเวณวัดสระกำแพงใหญ่ ค่ะ 
+              ซึ่งเป็นปราสาทขอมอีกแห่งในศรีสะเกษที่น่ามาเยี่ยมชม สันนิษฐานว่า 
+              ปราสาทสร้างระหว่างกลางถึงปลายพุทธศตวรรษที่ 16 ที่มีอายุกว่า 1,000 ปี เลยทีเดียว 
+              นับเป็นโบราณสถานเก่าแก่ และสำคัญมากๆ ในประเทศไทยค่ะ  
+              นอกจากนี้ยังมีการพบวัตถุโบราณที่ทรงคุณค่าภายในบริเวณปราสาทหินสระกำแพงใหญ่มากมาย
+               เช่น ทับหลังจำหลักภาพศิวะนาฏราช ทับหลังจำหลักภาพพระกฤษณะยกเขาโควรรธนะ 
+               และในปีพ.ศ. 2532 ได้ค้นพบประติมากรรมสำริดขนาดใหญ่สูง 140 เซนติเมตร 
+               เป็นศิลปะขอมแบบบาปวนตอนปลาย ซึ่งมีความสำคัญมากๆ 
+              ปัจจุบันจัดแสดงพิพิธภัณฑ์สถานแห่งชาติพิมาย จังหวัดนครราชสีมาค่ะ
+              ที่อยู่ : วัดสระกำแพงใหญ่ หมู่ 1 ถนนประดิษฐ์ประชาราษฎร์ ตำบลสระกำแพงใหญ่ อำเภออุทุมพรพิสัย จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -350,7 +424,15 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>ปราสาทหินสระกำแพงน้อย</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 2</p>
+              <p>     ปราสาทหินสระกำแพงน้อย ตั้งอยู่ภายในวัดสระกำแพงน้อยค่ะ 
+              สันนิษฐานว่าสร้างขึ้นนช่วงราวพุทธศตวรรษที่ 18 มีลักษณะศิลปะการก่อสร้างแบบขอม 
+              เป็นปรางค์เดี่ยวสร้างด้วยศิลาแลงรูปสี่เหลี่ยมย่อมุม นับเป็น อโรคยศาลา 
+              หรือโรงพยาบาลในสมัยพระเจ้าชัยวรมันที่ 7 แห่งอาณาจักรขอมโบราณนั่นเองค่ะ
+                 นอกจากนี้ ภายในปราสาทสระกำแพงน้อย 
+                 ยังมี สระอโนดาต ซึ่งเป็นบ่อน้ำศักดิ์สิทธิ์ที่ถูกใช้ในทำน้ำพระพุทธมนต์ศักดิ์สิทธิ์ในพิธีสำคัญของจังหวัดศรีสะเกษ
+                  และเป็นหนึ่งในแหล่งน้ำศักดิ์สิทธิ์ที่ใช้ในงานพระราชพิธีบรมราชาภิเษก 
+                  ในการประกอบพิธีพลีกรรมตักน้ำศักดิ์สิทธิ์อีกด้วยค่ะv
+                  ที่อยู่ : วัดสระกำแพงน้อย ถนนสายอุทุมพรพิสัย-ศรีสะเกษ ตำบลขะยูง อำเภออุทุมพรพิสัย จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -362,7 +444,13 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดป่าศรีมงคลรัตนาราม</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 3</p>
+              <p> วัดป่าศรีมงคลรัตนาราม วัดสวย ศรีสะเกษ ที่เป็นทั้งสถานที่อบรมปฏิบัติธรรมกัมมัฏฐาน 
+              และสถานที่ท่องเที่ยว ที่สวยงามมากๆ ค่ะ ที่นี่โดดเด่นด้วย ถ้ำนาคาธิบดี หรือ ถ้ำพญานาค 
+              ซึ่งได้มีออกแบบพื้นที่ให้กลายเป็น วังบาดาล 
+              ที่สวยงามด้วยการจำลองหินงอกหินย้อย เพื่อเป็นสถานที่ท่องเที่ยวเชิงพุทธศาสนาค่ะ
+              ภายในถ้ำประดิษฐาน พระพุทธรูปหยกขาว และรูปปั้นพญานาคตามวรรณคดีที่อ่อนช้อยงดงาม 2 ตน คอยปกปักษ์รักษา 
+              อีกทั้งยังมีการประดับไฟหลายสีสันอย่างสวยงามอีกด้วย
+              ที่อยู่ : บ้านสิม หมู่ 8 ตำบลโคกจาน อำเภออุทุมพรพิสัย จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -374,7 +462,14 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดสระกำแพงใหญ่</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 4</p>
+              <p>     วัดสระกำแพงใหญ่ เป็นวัดที่ตั้งสรีระสังขารของ หลวงปู่เครื่อง สุภัทโท พระที่เป็นที่เคารพศรัทธาของพุทธศาสนิกชนทั่วไป 
+              ถึงแม้ว่าหลวงปู่เครื่องจะมรณภาพไปหลายปีแล้ว 
+              แต่ประชาชนก็ยังคงเลื่อมใสศรัทธาและเดินทางมาวัดแห่งนี้กันอยู่เสมอมา
+               อีกทั้งยังมี โบราณสถาน ปราสาทหิน ที่มีอายุกว่า 1,000 ปีอีกด้วย
+                ซึ่งเป็นปราสาทหินขนาดใหญ่และสมบูรณ์ที่สุดของจังหวัดเลยทีเดียวค่ะ
+                ที่อยู่ : ถนนประดิษฐ์ประชาราษฎร์ ตำบลสระกำแพงใหญ่ อำเภออุทุมพรพิสัย จังหวัดศรีสะเกษ
+
+ </p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -386,7 +481,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>สถานีรถไฟอุทุมพรพิสัย</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 5</p>
+              <p>  สถานีรถไฟอุทุมพรพิสัย นั้นถือได้ว่าเป็นศูนย์การหลักของการขนส่งทางบกของ อำเภออุทุมพรพิสัย เลยก็ว่าได้ค่ะ ซึ่งที่นี่ก็ยังคงความสวยงามแบบดั้งเดิมให้ได้เห็นกัน และภายในสถานีรถไฟเอง ก็มีหุ่นขี้ผึ้งหลวงปู่เครื่องสุภัทโท 
+              ให้ได้สักการะไหว้ขอพรกันก่อนออกเดินทางอีกด้วย 
+              รวมถึงมีตลาดให้เราได้ซื้อของกินของใช้กัน 
+              ใครอยากชมความเก่าแก่ของสถานี มาช้อปชิมชิล แวะมาได้เลยจ้า
+              ที่อยู่ : ตำบลกำแพง อำเภออุทุมพรพิสัย จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -398,7 +497,12 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>วัดป่าเวฬุวัน</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 6</p>
+              <p>     วัดป่าเวฬุวัน สร้างขึ้นมาโดย หลวงปู่เสรี ธัมมวโร เมื่อปี พ.ศ 2530 
+              บริเวณวัดจะรอบล้อมไปด้วยต้นไม้มากมาย และความที่ หลวงปู่เสรี ธัมมวโร นั้น เป็นถึงเกจิชื่อดัง 
+              ทำให้ท่านมีลูกศิษย์มากมาย โดยภายในวัดก็จะมี หลวงพ่อใหญ่ธรรมมงคล พระพทธรูปขนาดใหญ่ 
+              ตั้งอยู่เด่นเป็นสง่าให้เราได้กราบไหว้สักการะขอพรกันค่ะ และไม่ใกล้ไม่ไกลกันยังมีหนองนาแซงขนาดใหญ่ที่สวยงามให้เราได้ชมวิวกัน 
+              และกำลังจะพัฒนาเป็นแหล่งท่องเที่ยวในอนาคตอันใกล้นี้อีกด้วยค่ะ
+              ที่อยู่ : ตำบลแข้ อำเภออุทุมพรพิสัย จังหวัดศรีสะเกษ</p>
             </div>
           </div>
 
@@ -413,7 +517,16 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>ผามออีแดง</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 1</p>
+              <p>   ผามออีแดง เป็นจุดชมวิวที่อยู่ระหว่างเส้นทางขึ้นสู่เขาพระวิหารค่ะ 
+              ตั้งอยู่ในอุทยานแห่งชาติเขาพระวิหาร 
+              ตลอดแนวผามออีแดงจะมีระยะประมาณ 300 เมตร เราสามารถเดินชมวิวสวยๆ ไ
+              ปได้เรื่อยๆ เพลินๆ สามารถมองเห็นประเทศกัมพูชาได้อีกด้วยจ้า 
+              ทำให้ที่นี่เป็นจุดชมวิวที่สวยมากๆ อีกแห่งหนึ่งในภาคอีสานเลยทีเดียว     
+               อีกทั้งที่ผามออีแดงแห่งนี้ ยังมีการพบภาพแกะสลักนูนต่ำบนแผ่นหินรูปพระศิวะ พระอุมา และพระนารายณ์ 
+               เป็นศิลปะขอมอายุราวๆ พุทธศตวรรษที่ 14 รวมถึงยังมี สถูปคู่ ซึ่งเป็นสถูปหินทราย 2 องค์ ลักษณะเป็นสี่เหลี่ยมลูกบาศก์ 
+              ข้างในเป็นโพรงใช้สำหรับบรรจุสิ่งของในสมัยโบราณอีกด้วย
+              ที่อยู่ : อุทยานแห่งชาติเขาพระวิหาร ตำบลเสาธงชัย อำเภอกันทรลักษ์ จังหวัดศรีสะเกษ
+ </p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -425,7 +538,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>น้ำตกถ้ำขุนศรี</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 2</p>
+              <p>    น้ำตกถ้ำขุนศรี ตั้งอยู่ในอุทยานแห่งชาติเขาพระวิหาร ซึ่งอยู่ไม่ไกลจากผามออีแดงค่ะ 
+              เป็นน้ำตกที่เกิดจากห้วยตามี ในช่วงหน้าฝน ที่น้ำตกจะมีน้ำไหลลงมาในปริมาณมาก แผ่เป็นม่านอย่างสวยงาม 
+              แต่ในช่วงหน้าแล้งนั้น 
+              ที่นี่จะไม่มีน้ำตกให้เที่ยวชม เพราะฉะนั้นควรเช็คให้ดีก่อนที่จะเดินทางไปเที่ยวค่ะ
+              ที่อยู่ : อำเภอกันทรลักษ์ จังหวัดศรีสะเกษ จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -437,7 +554,11 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>ปราสาทโดนตวล</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 3</p>
+              <p>   ปราสาทโดนตวล เป็นปราสาทขอมขนาดเล็ก ที่อยู่ท่ามกลางต้นไม้น้อยใหญ่ 
+              สร้างขึ้นในช่วงพุทธศตวรรษที่15-16 โดยเป็นปรางค์เดี่ยว แผนผังรูปสี่เหลี่ยมจัตุรัสกว้าง 
+              ป็นโบราณสถานสวยๆ เก่าแก่ของ ศรีสะเกษ 
+              สถานที่ท่องเที่ยวที่อยู่ติดชายแดน อันทรงคุณค่าอย่างมาก หนึ่งในปราสาทของภาคอีสาน ที่ต้องไปชมเลยค่า
+              ที่อยู่ : ตำบลบึงมะลู อำเภอกันทรลักษ์ จังหวัดศรีสะเกษ</p>
             </div>
             <div
               class="col-md-4 portfolio-item"
@@ -449,7 +570,10 @@
                 style="width: 100%; border-radius: 5px"
               />
               <h4>น้ำตกวังใหญ่</h4>
-              <p>รายละเอียดเกี่ยวกับสถานที่ 3</p>
+              <p>    น้ำตกวังใหญ่ เป็นน้ำตกสวยที่อยู่ภายใน เขตรักษาพันธุ์สัตว์ป่าพนมดงรัก รอบๆ จะล้อมไปด้วยธรรมชาติอันสวยงาม 
+              อีกทั้งเราสามารถมาเที่ยวกันได้ตลอดทั้งปีด้วยค่ะ โดยสายน้ำของน้ำตกนี้จะไหลมาจากเทือกเขาพนมดงรัก สูงประมาณ 5 เมตร สามารถลงเล่นน้ำได้ตลอดเเนว
+               และยังเป็นแหล่งศึกษาพืชและสมุนไพรต่างๆ อีกด้วย ซึ่งช่วงฤดูฝนและฤดูหนาวนี่แหละค่ะ ที่เหมาะกับการมาเที่ยวมากที่สุด
+               ที่อยู่ : ตำบลละลาย อำเภอกันทรลักษ์ จังหวัดศรีสะเกษ</p>
             </div>
           </div>
 
