nav and home fiix

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
     text-align: center;
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 150px;
   }
   .products {
     display: flex;
@@ -76,7 +76,7 @@
 
   /* About Section */
   .about {
-    margin-top: 40px;
+    margin-top: 250px;
     text-align: center;
   }
   .team-member {
@@ -116,7 +116,7 @@
 
 <body>
   <div class="container">
-    <div class="title">สถานที่เที่ยวในจังหวัดศรีสะเกษ</div>
+    <div class="title"></div>
 
     <div class="products">
       <!-- Your product items go here -->
